hphp/hack/test/typecheck/control_flow/lambda.php.exp
File "lambda.php", line 23, characters 5-15:
  exact A
File "lambda.php", line 24, characters 5-15:
  exact A
File "lambda.php", line 51, characters 11-21:
  [unresolved]
File "lambda.php", line 71, characters 9-19:
  ([unresolved] | exact D | exact G | exact J)
File "lambda.php", line 23, characters 5-15:[2]
  (exact A | exact B | exact C)
File "lambda.php", line 24, characters 5-15:[2]
  (exact A | exact B | exact C)
File "lambda.php", line 51, characters 11-21:[2]
  [unresolved]
File "lambda.php", line 71, characters 9-19:[2]
  ([unresolved] | exact D | exact G | exact J)
File "lambda.php", line 86, characters 3-13:
  (exact A | exact B | exact C | exact E)
File "lambda.php", line 87, characters 3-13:
  (exact A | exact B | exact C | exact E)
File "lambda.php", line 48, characters 11-19:
continue can only be used inside loops (NastCheck[3023])
